[package]
name = "edit"
version = "1.2.1"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

build = "build/main.rs"
categories = ["text-editors"]

[[bench]]
name = "lib"
harness = false

[features]
# Display editor latency in the top-right corner
debug-latency = []

[dependencies]
stdext.workspace = true
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
stdext.workspace = true
# The default toml crate bundles its dependencies with bad compile times. Thanks.
# Thankfully toml-span exists. FWIW the alternative is yaml-rust (without the 2 suffix).
toml-span = { version = "0.6", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1", default-features = false }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
zstd = { version = "0.13", default-features = false }
